[gd_scene load_steps=20 format=3 uid="uid://ccxsle1bheae6"]

[ext_resource type="Script" path="res://scripts/memory_board.gd" id="1_i6hrm"]
[ext_resource type="Texture2D" uid="uid://bdn8xpy5p4yy4" path="res://assets/memo blocks/memo_card.png" id="2_xuout"]
[ext_resource type="Texture2D" uid="uid://cpt22ftixd5ed" path="res://assets/memo blocks/eye.png" id="3_ysuwt"]
[ext_resource type="Texture2D" uid="uid://bm3kim7kor23i" path="res://assets/memo blocks/memo_card_hover.png" id="4_qggaq"]
[ext_resource type="Texture2D" uid="uid://cdxdmqwxlb08e" path="res://assets/memo blocks/memo_card_solved 2.png" id="5_j1m2w"]
[ext_resource type="Texture2D" uid="uid://cu4jordbqhy01" path="res://assets/memo blocks/plus.png" id="6_0cnsk"]
[ext_resource type="Texture2D" uid="uid://8401qako0oko" path="res://assets/memo blocks/cat.png" id="6_pnuyy"]
[ext_resource type="Texture2D" uid="uid://dm33m04uvs08i" path="res://assets/memo blocks/snail.png" id="7_6e2gq"]
[ext_resource type="Texture2D" uid="uid://xtsvay6lo4x2" path="res://assets/memo blocks/pac_man.png" id="7_i4je2"]
[ext_resource type="Texture2D" uid="uid://j00iwb2o3y6" path="res://assets/memo blocks/rainbow.png" id="8_7ngj2"]
[ext_resource type="AudioStream" uid="uid://gai5hffeemv8" path="res://assets/audio/ghost_sound.wav" id="8_546hx"]
[ext_resource type="AudioStream" uid="uid://dudxwbnesdv8x" path="res://assets/audio/block_select_sound.mp3" id="9_dmmdb"]
[ext_resource type="AudioStream" uid="uid://3b8su4pvj345" path="res://assets/audio/good_match_sound.wav" id="10_i5ckd"]
[ext_resource type="Texture2D" uid="uid://chlywadc3r2ei" path="res://assets/memo blocks/hanger.png" id="11_w6vls"]
[ext_resource type="Texture2D" uid="uid://voy2m5vkecta" path="res://assets/memo blocks/p.png" id="12_d7xj1"]

[sub_resource type="Animation" id="Animation_b00mb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Row2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Row1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ddm66"]
resource_name = "row2_switch"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Row2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.06667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.482353), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3wgu2"]
resource_name = "row_switch"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Row1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.06667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.482353), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v16ol"]
_data = {
"RESET": SubResource("Animation_b00mb"),
"row2_switch": SubResource("Animation_ddm66"),
"row_switch": SubResource("Animation_3wgu2")
}

[node name="MemoryBoard" type="Node2D"]
script = ExtResource("1_i6hrm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(18.9998, 7.00006)
scale = Vector2(3.5346, 2.89048)
texture = ExtResource("2_xuout")

[node name="WrongTriesCount" type="Label" parent="."]
visible = false
offset_left = -771.0
offset_top = -1473.0
offset_right = 836.0
offset_bottom = -1254.0
theme_override_colors/font_color = Color(0.388235, 0.196078, 0.141176, 1)
theme_override_font_sizes/font_size = 160
text = "wrong tries counter: "

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -1636.0
offset_top = -1263.0
offset_right = 4944.0
offset_bottom = 3793.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 200
alignment = 1

[node name="Row1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Row1"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("3_ysuwt")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("3_ysuwt")

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/Row1"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("6_0cnsk")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("6_0cnsk")

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/Row1"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("7_i4je2")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("7_i4je2")

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/Row1"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("8_7ngj2")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("8_7ngj2")

[node name="TextureButton5" type="TextureButton" parent="VBoxContainer/Row1"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("7_6e2gq")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("7_6e2gq")

[node name="Row2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Row2"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("6_pnuyy")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("6_pnuyy")

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/Row2"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("11_w6vls")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("11_w6vls")

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/Row2"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("11_w6vls")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("11_w6vls")

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/Row2"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("7_6e2gq")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("7_6e2gq")

[node name="TextureButton5" type="TextureButton" parent="VBoxContainer/Row2"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("3_ysuwt")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("3_ysuwt")

[node name="Row3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Row3"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("6_pnuyy")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("6_pnuyy")

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/Row3"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("7_6e2gq")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("7_6e2gq")

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/Row3"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("6_pnuyy")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("6_pnuyy")

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/Row3"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("12_d7xj1")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("12_d7xj1")

[node name="TextureButton5" type="TextureButton" parent="VBoxContainer/Row3"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("7_6e2gq")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("7_6e2gq")

[node name="Row4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Row4"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("8_7ngj2")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("8_7ngj2")

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/Row4"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("7_i4je2")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("7_i4je2")

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/Row4"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("6_0cnsk")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("6_0cnsk")

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/Row4"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("7_6e2gq")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("7_6e2gq")

[node name="TextureButton5" type="TextureButton" parent="VBoxContainer/Row4"]
layout_mode = 2
texture_normal = ExtResource("2_xuout")
texture_pressed = ExtResource("12_d7xj1")
texture_hover = ExtResource("4_qggaq")
texture_disabled = ExtResource("5_j1m2w")
texture_focused = ExtResource("12_d7xj1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v16ol")
}

[node name="GhostSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_546hx")

[node name="BlockSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_dmmdb")
volume_db = 20.0

[node name="GoodMatchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_i5ckd")
volume_db = 10.0
